--- a/programan-community-web/src/main/resources/static/html/top-nav.html
+++ b/programan-community-web/src/main/resources/static/html/top-nav.html
@@ -36,7 +36,7 @@
 					<a class="nav-link" href="/login.html" onfocus="this.blur();">登录</a>
 				</li>
 				<li class="nav-item" sec:authorize="!isAuthenticated()">
-					<a class="nav-link" href="/register" onfocus="this.blur();">注册</a>
+					<a class="nav-link" href="/getRegister" onfocus="this.blur();">注册</a>
 				</li>
 				<li class="nav-item" sec:authorize="!isAuthenticated()">
 					<a class="nav-link" href="/login.html" target="_blank" onfocus="this.blur();" style="color: #2f3238;"><span id="login-btn">.</span></a>
