--- a/programan-community-web/src/main/resources/static/html/edit.html
+++ b/programan-community-web/src/main/resources/static/html/edit.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="edit-left">
 			<a href="#/edit/blog" onfocus="this.blur();">写文章</a>
-			<a href="#/article/managel" onfocus="this.blur();">文章管理</a>
+			<a href="#/article/managel" id="article-manager-btn" onfocus="this.blur();">文章管理</a>
 		</div>
 		<div class="edit-right">
 			
