[programan] 短信验证，密码修改，完善Safari兼容

--- a/programan-community-web/src/main/resources/static/forgetPassword.html
+++ b/programan-community-web/src/main/resources/static/forgetPassword.html
@@ -41,7 +41,12 @@
 			        		<input type="text" id="username" placeholder="输入用户名" class="form-control">
 			        		<input type="password" id="newPwd" placeholder="输入新密码" class="form-control">
 			        		<input type="password" id="rnewPwd" placeholder="再次输入新密码" class="form-control">
-			        		<input type="text" id="phoneNumber" placeholder="输入手机号" class="form-control">
+			        		
+			        		<div class="send-sms">
+			        			<input type="text" id="phoneNumber" placeholder="输入手机号" class="form-control phone-input">
+			        			<input type="button" id="btn" class="sms-btn" value="免费获取验证码" onclick="settime(this, 'phoneNumber')" />
+			        		</div>
+			        		<input type="text" placeholder="请输入验证码" name="smsCode" id="smsCode" class="form-control">
 			        		<input type="button" class="submit-input" name="" id="" value="重置密码" onclick="forgetPwd()"/>
 			        </form>
 				</div>
