--- a/programan-community-web/src/main/resources/static/html/article.html
+++ b/programan-community-web/src/main/resources/static/html/article.html
@@ -14,8 +14,8 @@
 
 				</span>
 				<span>
-					<input type="button" th:if="${follow eq 'yes'}" class="submit-input" id="unFollowBtn" value="取消关注" th:onclick="'unFollowUser(' + ${user.id} + ')'"/>
-					<input type="button" th:if="${follow eq 'no'}" class="submit-input" id="followBtn" value="关注" th:onclick="'followUser(' + ${user.id} + ')'"/>
+					<input type="button" th:if="${follow eq 'yes' && edit ne 'yes'}" class="submit-input" id="unFollowBtn" value="取消关注" th:onclick="'unFollowUser(' + ${user.id} + ')'"/>
+					<input type="button" th:if="${follow eq 'no' && edit ne 'yes'}" class="submit-input" id="followBtn" value="关注" th:onclick="'followUser(' + ${user.id} + ')'"/>
 				</span>
 			</div>
 			<div class="auth-info-middle">
@@ -73,8 +73,8 @@
 		</div>
 		<div class="article-body" id="articleBody" th:utext="${article.body}"></div>
 		<div class="article-comment">
-			<a href="javascritp:void(0)" th:if="${like eq 'no'}" id="article-like-btn" class="article-like-btn" th:onclick="'likeThisArticle(' + ${article.id} + ')'"><i id="thumds" class="fa fa-thumbs-up"></i><span id="likeNum" th:text="${likeNum}"></span></a>
-			<a href="javascritp:void(0)" th:if="${like eq 'yes'}" id="article-like-btn" class="article-unlike-btn" th:onclick="'unLikeThisArticle(' + ${article.id} + ')'"><i id="thumds" class="fa fa-thumbs-o-up"></i><span id="likeNum" th:text="${likeNum}"></span></a>
+			<button th:if="${like eq 'no' && edit ne 'yes'}" id="article-like-btn" class="article-like-btn" th:onclick="'likeThisArticle(' + ${article.id} + ')'"><i id="thumds" class="fa fa-thumbs-up"></i><span id="likeNum" th:text="${likeNum}"></span></button>
+			<button th:if="${like eq 'yes' && edit ne 'yes'}" id="article-like-btn" class="article-unlike-btn" th:onclick="'unLikeThisArticle(' + ${article.id} + ')'"><i id="thumds" class="fa fa-thumbs-o-up"></i><span id="likeNum" th:text="${likeNum}"></span></a>
 		</div>
 		<div class="article-comment">
 			<textarea name="articleComment" id="articleComment" class="article-comment-text" placeholder="想对作者说点什么呢"></textarea>
@@ -82,16 +82,7 @@
 		</div>
 		<a name="article-comment"></a>
 		<div class="article-comment" id="article-comment">
-			<!--<div class="article-comment-box">
-				<div class="top">
-					<a href="#"><img src="/img/test/xiaohuangren.png"/></a>
-					<a href="#">programan:</a>
-					<span>楼主，我想请教一下，我用进程池pool类做测试，Array数据不能做到共享是什么原因？这个Array和Value只支持Process类吗？</span>
-				</div>
-				<div class="bot">
-					2019-04-28 12:03:09
-				</div>
-			</div>-->
+			
 		</div>
 	</div>
 </div>
