--- a/programan-community-web/src/main/resources/static/html/download.html
+++ b/programan-community-web/src/main/resources/static/html/download.html
@@ -31,7 +31,7 @@
 	            	<h4 class="text-center">下载资源</h4>
             </div>
             	<div class="modal-body">
-            		<a id="downloadFileUrl" href="" onclick="updatePNumd()">点击开始下载</a>
+            		<a id="downloadFileUrl" href="" download="" onclick="updatePNumd()">点击开始下载</a>
             		<input type="hidden" id="downloadFilePrice" value=""/>
             	</div>
         </div>
