--- a/programan-community-web/src/main/resources/static/html/blog.html
+++ b/programan-community-web/src/main/resources/static/html/blog.html
@@ -2,7 +2,7 @@
 <main class="clearfix">
 	<div class="blog-body">
 		<!--sidebar-->
-		<aside id="sidebar">
+		<aside id="sidebar" class="sticky">
 	
 			<div class="inside" id="blogMenu">
 				
