--- a/programan-community-web/src/main/resources/static/html/m-user-detail.html
+++ b/programan-community-web/src/main/resources/static/html/m-user-detail.html
@@ -92,6 +92,10 @@
                                 <div class=" col-sm-5">
                                     <input type="text" class="form-control" id="phone" name="phone" placeholder="头像">
                                 </div>
+                                <label class="control-label col-sm-1" for="createDate">注册日期: </label>
+                                <div class=" col-sm-5">
+                                    <input type="text" class="form-control" id="createDate" name="createDate" placeholder="注册日期" readonly="">
+                                </div>
                             </div>
                             <div class="form-group">
 	                            <label class="control-label col-lg-1" for="introduction">简介: </label>
