--- a/programan-community-web/src/main/resources/static/html/userInfoEdit.html
+++ b/programan-community-web/src/main/resources/static/html/userInfoEdit.html
@@ -42,6 +42,7 @@
 							<li id="user-info-area"></li>
 							<li id="user-info-industry"></li>
 							<li id="user-info-job"></li>
+							<li id="user-info-createDate"></li>
 							<li id="user-info-introduction"></li>
 						</ul>
 					</div>
