--- a/programan-community-web/src/main/resources/static/html/userInfoEdit.html
+++ b/programan-community-web/src/main/resources/static/html/userInfoEdit.html
@@ -4,6 +4,7 @@
 			<a href="#/user/info" onfocus="this.blur();">个人资料</a>
 			<a href="#/user/follow" onfocus="this.blur();">我的关注</a>
 			<a href="#/user/funs" onfocus="this.blur();">我的粉丝</a>
+			<a href="#/user/comments" onfocus="this.blur();">我的评论</a>
 			<hr />
 			<a href="#/article/manage" onfocus="this.blur();">我的博客</a>
 			<!--<a href="#" onfocus="this.blur();">我的下载</a>-->
@@ -63,6 +64,12 @@
 			<div id="userCourseDiv" class="user-info-update" style="display: none;">
 				<h2>我的课程</h2>
 				<div class="info-body" id="my-course">
+					
+				</div>
+			</div>
+			<div id="userCommentDiv" class="user-info-update" style="display: none;">
+				<h2>我的评论</h2>
+				<div class="info-body" id="my-comment">
 					
 				</div>
 			</div>
