--- a/programan-community-web/src/main/resources/static/html/m-advertisement2-detail.html
+++ b/programan-community-web/src/main/resources/static/html/m-advertisement2-detail.html
@@ -55,6 +55,12 @@
 	                                <input type="text" class="form-control" name="location" id="location" placeholder="位置">
 	                            </div>
                             </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-1" for="url">点击url: </label>
+                                <div class=" col-sm-5">
+	                                <input type="text" class="form-control" name="url" id="url" placeholder="点击url">
+	                            </div>
+                            </div>
                             
                             <div class="form-group">
                                 <div class="col-sm-10  col-lg-offset-2">
